@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2019-02-12
+ * Added get_field_options() and format_field_options() to wing.vue.js.
+
 2019-02-05
  * Modified S3Image to allow verification of an image outside of the handle upload method.
  * Added the append() method to wing.object_list in wing.vue.js.
